tests/snapshots/run_wpt_conformance__coreml_gather_float16_1D_tensor_and_int32_4D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float16 1D tensor and int32 4D indices default options",
    "coreml",
    "PASS",
)
