tests/snapshots/run_wpt_conformance__coreml_gather_float16_1D_tensor_and_uint32_0D_scalar_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float16 1D tensor and uint32 0D scalar indices default options, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported constant data type: Uint32

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f16[24];
  }

  consts {
    operand_0: u32[] @bytes([4, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
